Fixed the component spacings in the home page

--- a/src/components/FooterBanner/FooterBanner.scss
+++ b/src/components/FooterBanner/FooterBanner.scss
@@ -11,8 +11,6 @@
     justify-content: center;
     gap: 2.5rem;
 
-    padding: 0 1.5rem;
-
     .footerBanner__image {
         height: 300px;
         width: 100%;
@@ -54,7 +52,6 @@
 
     @media screen and (min-width: 768px) {
         gap: 4rem;
-        padding: 0 2.5rem;
 
         .footerBanner__info {
             h2 {
@@ -66,7 +63,6 @@
 
     @media screen and (min-width: 1140px) {
         gap: 30px;
-        padding: 0 165px;
         flex-direction: row-reverse;
         justify-content: space-between;
 
