--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -5,7 +5,6 @@
 }
 
 .menu__wrapper {
-    padding: 0 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -78,11 +77,9 @@
     @media screen and (min-width: 768px) {
         flex-direction: row;
         gap: 10px;
-        padding: 0 2.5rem;
     }
 
     @media screen and (min-width: 1140px) {
         gap: 30px;
-        padding: 0 165px;
     }
 }
